# simple-kinect-scanner

./: BasicOperations.h  CMakeLists.txt  CloudRegister.h  CommonTypes.h  PLY.cpp  README.md  concat.cpp  dialog.cpp  dialog.h  dialog.ui  grabber.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh_viewer.cpp  process.cpp  resources.qrc  rs232.c
doc/: crop_command
pcd_files/: concat_command  output.pcd  output.ply
sample_output/: output.pcd  output.ply  output.vtk
